--- a/index.html
+++ b/index.html
@@ -11,14 +11,9 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
 
     <title>Frontend Mentor | QR code component</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       * {
         margin: 0;
@@ -59,7 +54,7 @@
         border-radius: 10px;
       }
 
-      h2 {
+      h1 {
         color: hsl(218, 44%, 22%);
         font-size: 20px;
         font-weight: 700;
@@ -79,23 +74,25 @@
     </style>
   </head>
   <body>
-    <div id="white-board">
+    <main id="white-board">
       <section class="container">
         <img src="images/image-qr-code.png" alt="Image of a QR Code" />
         <caption>
-          <h2>Improve your front-end skills by building projects</h2>
+          <h1>Improve your front-end skills by building projects</h1>
           <p>
             Scan the QR code to visit Frontend Mentor and take your coding
             skills to the next level
           </p>
         </caption>
       </section>
-    </div>
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/zaidansari42">Zaid Ansari</a>.
-    </div>
+    </main>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://github.com/zaidansari42">Zaid Ansari</a>.
+      </div>
+    </footer>
   </body>
 </html>
